<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".views.SecondStep">

        <TextView
        android:id="@+id/activity_second_step__txt_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:gravity="center"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:text="@string/welcome_second_step"
        android:textColor="@color/colorLine"
        android:textSize="@dimen/txtSize"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_second_step_layout_address_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@+id/activity_second_step__txt_welcome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_second_step_txt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorLine"
            android:maxLines="1"
            android:hint="@string/address"
            android:paddingStart="@dimen/pdstart"
            android:paddingEnd="@dimen/pdstart"
            android:textColor="@color/colorAccent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_second_step_layout_office_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/pdstart"
        app:layout_constraintTop_toBottomOf="@+id/activity_second_step_layout_address_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_second_step_txt_office"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorLine"
            android:hint="@string/office_address"
            android:maxLines="1"
            android:paddingStart="@dimen/pdstart"
            android:paddingEnd="@dimen/pdstart"
            android:textColor="@color/colorAccent" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_second_step_layout_mobile_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pdstart"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@+id/activity_second_step_layout_office_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_second_step_txt_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorLine"
            android:hint="@string/mobile_number"
            android:maxLength="10"
            android:inputType="number"
            android:paddingStart="@dimen/pdstart"
            android:paddingEnd="@dimen/pdstart"
            android:textColor="@color/colorAccent" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/activity_second_step_et_hobbies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorLine"
        android:text="@string/hobbies"
        android:layout_marginTop="@dimen/pdstart"
        android:textSize="@dimen/gender_size"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/activity_second_step_layout_mobile_input_layout" />


    <CheckBox
        android:id="@+id/activity_second_step_et_booksreading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/chmrg"
        android:layout_marginTop="@dimen/chtop"
        android:text="@string/books_reading"
        android:onClick="onCheckboxClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_second_step_et_hobbies" />

    <CheckBox
        android:id="@+id/activity_second_step_et_newspaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/chmrg"
        android:layout_marginTop="@dimen/cht"
        android:text="@string/newspaper_reading"
        android:onClick="onCheckboxClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_second_step_et_booksreading" />

    <CheckBox
        android:id="@+id/activity_second_step_et_sports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/chmrg"
        android:layout_marginTop="@dimen/chb"
        android:text="@string/sports"
        android:onClick="onCheckboxClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_second_step_et_newspaper" />

    <CheckBox
        android:id="@+id/activity_second_step_et_movies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/chmrg"
        android:layout_marginTop="@dimen/chb"
        android:text="@string/movies"
        android:onClick="onCheckboxClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_second_step_et_sports" />

    <Button
        android:id="@+id/activity_second_step_et_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/next"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:background="@drawable/button_background"
        android:text="@string/save"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/activity_second_step_et_movies" />



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>